add images, some inspiration portfolios

--- a/projects.html
+++ b/projects.html
@@ -13,6 +13,8 @@
     <title>Projects</title>
   </head>
   <body>
+      <div class="container">
+      
     <nav class="navbar navbar-expand-sm navbar-light bg-light">
         <a class="navbar-brand" href="bstest.html">
             <img src="">ed-yu.com</a>
@@ -107,7 +109,7 @@
               </div>
           </div>
       </div>
-      
+      </div>
 
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
