--- a/test/index1.html
+++ b/test/index1.html
@@ -1,17 +1,16 @@
 <!doctype html>
 <html>
 <head>
-    <title>splash</title>
-    <link rel="stylesheet" href="css/edyu.css">
+    <title>Portal</title>
+    <link rel="stylesheet" href="edyu.css">
     <link href="https://fonts.googleapis.com/css?family=Comfortaa|Fredericka+the+Great|Poiret+One|Raleway+Dots|Righteous" rel="stylesheet"> 
 </head>
-<body>
-    
+<body>    
     <nav>
         <ul class="topnav" id="dropdownClick">
             <li><a href="#home">Home</a></li>
-            <li><a href="#photos">Photos</a></li>
-            <li><a href="#code">Code</a></li>
+            <li><a href="/code.html">Code</a></li>
+            <li><a href="#photos">Photography</a></li>
             <li><a href="#about">About</a></li>
             <li><a href="#contact">Contact</a></li>
             <li class="dropdownIcon"><a href="javascript:void(0)" onclick="dropdownMenu()">&#9776;</a></li>
@@ -34,7 +33,7 @@
     <div class="container"> 
         <div class="row">
             <div class="col-6" id="logo-e">
-                <h1>e</h1>
+                <h1><a href="/docs/bakery_sales.html">e</a></h1>
             </div>
             <div class="col-6" id="logo-d">
                 <h1>d</h1>
