revamp projects, update under construction

--- a/contact.html
+++ b/contact.html
@@ -44,13 +44,13 @@
                 <li class="nav-item">
                     <a class="nav-link" href="projects.html">Projects</a>
                 </li>
-                <li class="nav-item active">
+                <li class="nav-item">
                     <a class="nav-link" href="photos.html">Photography</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="blog.html">Blog</a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item active">
                     <a class="nav-link" href="contact.html">Contact</a>
                 </li>
             </ul>
@@ -58,19 +58,22 @@
     </nav>
     <!--/NAVBAR-->
 
-    <div class="container" style="margin-top:20px">
-        <div class="jumbotron">
-            <h1>Under construction...</h1>
-            <h1>Check back soon!</h1>
+    <div class="container">
+
+        <div class="row mx-auto">
+
+            <div class="col-lg-3 col-md-6">
+                <a href="https://github.com/tastyCanOfMalk" target="_blank"><img class="mx-auto d-block" height="50px" src="img/icons/github.svg" alt="github"></a>
+            </div>
+            <div class="col-lg-3 col-md-6">
+                <a href="mailto:hello@ed-yu.com?subject=From ed-yu.com&body=Hey, Eddie!" target="_blank"><img class="mx-auto d-block" height="50px" src="img/icons/gmail.svg" alt="gmail"></a>
+            </div>
+            <div class="col-lg-3 col-md-6">
+                <a href="https://www.kaggle.com/tastycanofmalk" target="_blank"><img class="mx-auto d-block" height="50px" src="img/icons/kaggle.svg" alt="kaggle"></a>
+            </div>
+            <div class="col-lg-3 col-md-6">
+                <a href="https://www.linkedin.com/in/edwardyu7000/" target="_blank"><img class="mx-auto d-block" height="50px" src="img/icons/linkedin.svg" alt="linkedin"></a>
+            </div>
+
         </div>
-        <!--jumbotron-->
     </div>
-    <!--container-->
-
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="js/bootstrap.min.js"></script>
-</body>
-
-</html>
