--- a/projects.html
+++ b/projects.html
@@ -59,13 +59,13 @@
     <!--/NAVBAR-->
 
     <div class="container">
-        
+
         <div class="jumbotron">
             <h1>Under construction...</h1>
             <h1>Check back soon!</h1>
         </div>
         <!--jumbotron-->
-        
+
         <div class="row">
 
             <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
@@ -83,12 +83,12 @@
 
             <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
                 <div class="card border-secondary mb-3">
-                    <div class="card-header">Bakery sales analysis</div>
+                    <div class="card-header">This website!</div>
                     <div class="card-body">
-                        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
-                        <p class="card-link"><a href="/projects/bakerySales.html" target="_blank">View project</a></p>
+                        <p class="card-text">You're here now. Have a look at the Github link for more a more detailed view.</p>
+                        <p class="card-link"><a href="https://github.com/tastyCanOfMalk/edyucom" target="_blank">View Github</a></p>
                     </div>
-                    <li class="list-group-item text-dark">Languages: R</li>
+                    <li class="list-group-item text-dark">Languages: HTML, CSS</li>
                 </div>
                 <!--/card-->
             </div>
