--- a/test/structure-test/index.html
+++ b/test/structure-test/index.html
@@ -16,14 +16,14 @@
     </ul>
 </nav>
         <div id="header">
-            <h1>div IDheader, H1</h1>
+            <h1>div IDheader, H1xdfssssssssssssssss dddd</h1>
         </div>
         
-        <h1 id="header">ID header h1</h1>
+        <h1 id="header">ID headder h1</h1>
         
         <h3>Intro</h3>
         <ul> Names
-            <li>1ist item1</li>
+            <li>1ist itemcfgbcgcxfg1</li>
             <li>1ist item2</li>
             <li>1ist item3</li>
         </ul>
@@ -53,6 +53,15 @@
         <div class="pro-img"></div>
         <div class="pro-img"></div>
         <div class="pro-img"></div>
+
+        <div id="main-content">
+        <h2>Using extends</h2>
+            <div class="alert">asdjkfb sdjfdasjh fasdf adfjhfahj </div>
+            <div class="success">asdjkfb sdjfdasjh fasdf adfjhfahj </div>
+            <div class="warning">asdjkfb sdjfdasjh fasdf adfjhfahj </div>
+            <div class="oh-dang">asdjkfb sdjfdasjh fasdf adfjhfahj </div>
+        </div>
+
 
     </body>
 </html>
