--- a/test/structure-test/index.html
+++ b/test/structure-test/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" href="CSS/app.css">
+        <link rel="stylesheet" href="css/app.css">
         <title>testing sass</title>
     </head>
     <body>
