--- a/test/structure-test/index.html
+++ b/test/structure-test/index.html
@@ -46,13 +46,21 @@
         <p>random text using p tag</p>
         <p>random text using p tag</p>
 
-        <div class="pro-img"><img src="#" alt=""></div>
         <div class="pro-img"></div>
         <div class="pro-img"></div>
         <div class="pro-img"></div>
         <div class="pro-img"></div>
         <div class="pro-img"></div>
         <div class="pro-img"></div>
+        <div class="pro-img"></div>
+
+        <div id="main-content">
+            <h2>Using Extends</h2>
+            <div class="alert">Random alert text here</div>
+            <div class="success">Random alert text here</div>
+            <div class="warning">Random alert text here</div>
+            <div class="dang">Random alert text here</div>
+        </div>
 
     </body>
 </html>
