--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ https://github.com/rushter/data-science-blogs
     <div class="container" style="margin-top:20px">
         <div class="jumbotron">
             <h1 class="display-4">Hello! My name is Eddie.</h1>
-            <p class="lead">I'm an R&D chemist with a penchant for <em>data science, coding, and photography.</em></p>
+            <p class="lead">I'm a chemist with a penchant for <em>data science, coding, and photography.</em></p>
             <p class="lead">Take a look around!</p>
             <hr class="my-4">
             <p class="lead text-center">Can't decide where to go? Click to pick at random: (Coming soon!)</p>
