--- a/contact.html
+++ b/contact.html
@@ -59,7 +59,17 @@
     <!--/NAVBAR-->
 
     <div class="container">
+        <div class="row">
+            <div class="col-5">
+                <h3>Want to get in touch?</h3>
+            </div>
+            <div class="col-7">
+                
+            </div>
+        </div>
+    </div>
 
+    <div class="container">
         <div class="row mx-auto">
 
             <div class="col-lg-3 col-md-6">
