color scheme for projects page updated

--- a/projects.html
+++ b/projects.html
@@ -19,7 +19,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="css/bootstrap-grid.min.css.map">
     <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link href="https://fonts.googleapis.com/css?family=Courgette|Fira+Mono|Open+Sans" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Courgette|Fira+Mono|Open+Sans|Montserrat|Open+Sans+Condensed:300" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
 
     <!-- favicons -->
@@ -64,126 +64,43 @@
                 </li>
             </ul>
         </div>
-    </nav>
-    <!--/NAVBAR-->
+    </nav> <!--/NAVBAR-->
 
     <div class="container">
-
-        <div class="jumbotron">
-            <h1>Under construction...</h1>
-            <h1>Check back soon!</h1>
+        <div class="row">
+            <div class="col text-center">
+                <h1 class="display-1">PROJECTS</h1>
+            </div>
         </div>
-        <!--jumbotron-->
+    </div>
 
+    <div class="container">
         <div class="row">
 
             <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
-                <div class="card border-primary mb-3">
-                    <div class="card-header">Bakery sales analysis</div>
+                <div class="card border-color-1 mb-3">
+                    <div class="card-header card-header-color-1">Bakery sales analysis</div>
                     <div class="card-body">
                         <p class="card-text">Exploratory and market basket analysis on transaction data from a bakery.</p>
                         <p class="card-link"><a href="/projects/bakerySales.html" target="_blank">View project</a></p>
                     </div>
-                    <li class="list-group-item text-dark">Languages: R</li>
-                </div>
-                <!--/card-->
-            </div>
-            <!--/col-->
+                    <li class="list-group-item text-dark">R</li>
+                </div> <!--/card-->
+            </div> <!--/col-->
 
             <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
-                <div class="card border-secondary mb-3">
-                    <div class="card-header">This website!</div>
+                <div class="card border-color-2 mb-3">
+                    <div class="card-header card-header-color-2">ed-yu.com</div>
                     <div class="card-body">
-                        <p class="card-text">You're here now. Have a look at the Github link for more a more detailed view.</p>
+                        <p class="card-text">This website! A boostrapped site to showcase projects varying from coding to photography.</p>
                         <p class="card-link"><a href="https://github.com/tastyCanOfMalk/edyucom" target="_blank">View Github</a></p>
                     </div>
-                    <li class="list-group-item text-dark">Languages: HTML, CSS</li>
-                </div>
-                <!--/card-->
-            </div>
-            <!--/col-->
+                    <li class="list-group-item text-dark">HTML, CSS</li>
+                </div> <!--card-->
+            </div> <!--/col-->
 
-            <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
-                <div class="card border-warning mb-3">
-                    <div class="card-header">Bakery sales analysis</div>
-                    <div class="card-body">
-                        <p class="card-text">Exploratory and market basket analysis on transaction data from a bakery.</p>
-                        <p class="card-link"><a href="/projects/bakerySales.html" target="_blank">View project</a></p>
-                    </div>
-                    <li class="list-group-item text-dark">Languages: R</li>
-                </div>
-                <!--/card-->
-            </div>
-            <!--/col-->
-
-            <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
-                <div class="card border-info mb-3">
-                    <div class="card-header">Bakery sales analysis</div>
-                    <div class="card-body">
-                        <p class="card-text">Exploratory and market basket analysis on transaction data from a bakery.</p>
-                        <p class="card-link"><a href="/projects/bakerySales.html" target="_blank">View project</a></p>
-                    </div>
-                    <li class="list-group-item text-dark">Languages: R</li>
-                </div>
-                <!--/card-->
-            </div>
-            <!--/col-->
-
-            <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
-                <div class="card border-success mb-3">
-                    <div class="card-header">Bakery sales analysis</div>
-                    <div class="card-body">
-                        <p class="card-text">Exploratory and market basket analysis on transaction data from a bakery.</p>
-                        <p class="card-link"><a href="/projects/bakerySales.html" target="_blank">View project</a></p>
-                    </div>
-                    <li class="list-group-item text-dark">Languages: R</li>
-                </div>
-                <!--/card-->
-            </div>
-            <!--/col-->
-
-            <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
-                <div class="card border-danger mb-3">
-                    <div class="card-header">Bakery sales analysis</div>
-                    <div class="card-body">
-                        <p class="card-text">Exploratory and market basket analysis on transaction data from a bakery.</p>
-                        <p class="card-link"><a href="/projects/bakerySales.html" target="_blank">View project</a></p>
-                    </div>
-                    <li class="list-group-item text-dark">Languages: R</li>
-                </div>
-                <!--/card-->
-            </div>
-            <!--/col-->
-
-            <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
-                <div class="card border-light mb-3">
-                    <div class="card-header">Bakery sales analysis</div>
-                    <div class="card-body">
-                        <p class="card-text">Nunc faucibus a pellentesque sit amet porttitor eget dolor. Fermentum leo vel orci porta non pulvinar. Sed augue lacus viverra vitae congue eu. Malesuada proin libero nunc consequat interdum varius. Amet consectetur adipiscing elit ut aliquam purus. Iaculis urna id volutpat lacus laoreet non curabitur gravida.</p>
-                        <p class="card-link"><a href="/projects/bakerySales.html" target="_blank">View project</a></p>
-                    </div>
-                    <li class="list-group-item text-dark">Languages: R</li>
-                </div>
-                <!--/card-->
-            </div>
-            <!--/col-->
-
-            <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
-                <div class="card border-dark mb-3">
-                    <div class="card-header">Bakery sales analysis</div>
-                    <div class="card-body">
-                        <p class="card-text">Exploratory and market basket analysis on transaction data from a bakery.</p>
-                        <p class="card-link"><a href="/projects/bakerySales.html" target="_blank">View project</a></p>
-                    </div>
-                    <li class="list-group-item text-dark">Languages: R</li>
-                </div>
-                <!--/card-->
-            </div>
-            <!--/col-->
-
-
-        </div>
-        <!--/container-->
+        </div><!-- row -->
+    </div> <!--/container-->
 
 
 
