add captcha test

--- a/about.html
+++ b/about.html
@@ -82,7 +82,7 @@
             </div>
             <div class=" col-lg-4 col-md-6">
                 <p>
-                    I'm a professional Chemist with a passion for problem-solving using generally as much technology as possible (I might have a problem).
+                    I'm a professional Chemist with a passion for problem-solving using effective, modern solutions.
                     <br>
                     <br>
                 </p>
@@ -97,13 +97,7 @@
             </div>
             <div class=" col-lg-4 col-md-6">
                 <p>
-                    When I'm not in the lab developing new products, you'll find me in front of the computer, attempting modern solutions to old problems. 
-                    <br>
-                    <br>
-                    I've taught myself several languages in efforts to streamline databases, quickly interpret and present data, and in general, just to have fun.
-                    <br>
-                    <br>
-                    I also just really like the word: <i>autodidact.</i>
+                    When I'm not in the lab developing new products, you'll find me learning new languages and methods to make my job easier. 
                     <br>
                     <br>
                 </p>
@@ -118,10 +112,7 @@
             </div>
             <div class=" col-lg-4 col-md-6">
                 <p>
-                    I'm currently enrolled in courses to expand my knowledge in the analytics field. I strongly believe that self-education must constantly be pursued. 
-                    <br>
-                    <br>
-                    Though chemistry has been a great adventure through the year, I hope to find myself in a more development focused problem-solving career.
+                    I'm currently enrolled in courses to expand my knowledge in the analytics field. Though analytics are my primary focus, I'm also gaining full-stack experience in efforts to bring the two together.
                     <br>
                     <br>
                 </p>
