remove extra css

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                     <div class="card border-color-2 mb-3">
                         <div class="card-header card-header-color-2">ed-yu.com</div>
                         <div class="card-body">
-                            <p class="card-text">This website! A boostrapped site to showcase projects varying from coding to photography.</p>
+                            <p class="card-text">This website! A boostrapped site to showcase my various projects.</p>
                             <p class="card-link"><a href="https://github.com/tastyCanOfMalk/edyucom" target="_blank">View Github</a></p>
                         </div>
                         <li class="list-group-item text-dark">HTML, CSS</li>
@@ -136,15 +136,15 @@
         <div class="row text-center">
             <div class="col"></div>
             <div class="col-8">
-                <h2>Want to know more?</h2>
-                <h3>Get in touch!</h3>
+                <h1>Contact me!</h1>
             </div>
+
             <div class="col"></div>
         </div>
 
         <div class="row">
             <div class="col"></div>
-            <div class="col-6">
+            <div class="col-lg-6 col-md-8 col-sm-10">
                 <form id="contact-form" method="post" action="recaptcha/contact.php" role="form" data-toggle="validator">
                     <div class="messages"></div>
                     <div class="row">
