--- a/index.html
+++ b/index.html
@@ -116,6 +116,17 @@
                 </div> <!--/col-->
     
                 <div class="col-xl-3 col-lg-4 col-md-6 d-flex align-items-stretch">
+                    <div class="card border-color-3 mb-3">
+                        <div class="card-header card-header-color-3">Ignition testing script</div>
+                        <div class="card-body">
+                            <p class="card-text">Script which automates the acquisition of ignition characteristics, calculating parameters such as delta, ignition time, and duration while presenting them in a concise graphical format.</p>
+                            <p class="card-link"><a href="https://github.com/tastyCanOfMalk/ignition_newshit" target="_blank">View Github</a></p>
+                        </div>
+                        <li class="list-group-item text-dark">R</li>
+                    </div> <!--/card-->
+                </div> <!--/col-->
+    
+                <div class="col-xl-3 col-lg-4 col-md-6 d-flex align-items-stretch">
                     <div class="card border-color-2 mb-3">
                         <div class="card-header card-header-color-2">ed-yu.com</div>
                         <div class="card-body">
