modfy code used on edyu project

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                             <p class="card-text">This website! A boostrapped site to showcase my various projects.</p>
                             <p class="card-link"><a href="https://github.com/tastyCanOfMalk/edyucom" target="_blank">View Github</a></p>
                         </div>
-                        <li class="list-group-item text-dark">HTML, CSS</li>
+                        <li class="list-group-item text-dark">HTML, CSS, Javascript</li>
                     </div> <!--card-->
                 </div> <!--/col-->
         
