--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             </br>
             </br>
                 <h1>Edward Yu</h1>
-                <h3>Data analysis // Full stack development</h3>
+                <h3>Data analysis</h3>
             </div>
             <div class="col"></div>
         </div>
@@ -85,6 +85,7 @@
                     <a href="https://github.com/tastyCanOfMalk" target="_blank" class="fab fa-github"></a>
                     <a href="https://www.linkedin.com/in/edwardyu7000/" target="_blank" class="fab fa-linkedin"></a>
                     <a href="https://www.kaggle.com/tastycanofmalk" target="_blank" class="fab fa-kaggle"></a>
+                    <a href="https://www.hackerrank.com/eddytheflow" target="_blank" class="fab fa-hackerrank"></a>
                     <a href="mailto:hello@ed-yu.com" target="_blank" class="far fa-envelope"></a>
                 </ul>
             </div>
